--- a/info/docs.texi
+++ b/info/docs.texi
@@ -18381,6 +18381,52 @@ To audio-format  text , use M-x voice-lock-mode.
 When this minor mode is on, the voices of the current line are
 updated with every insertion or deletion.
 
+@subsection Voice-Lock And Aural CSS
+The CSS Speech Style Sheet specification defines a number of
+abstract device independent voice properties.
+A setting conforming to the CSS speech specification can be
+represented in elisp as a structure.
+
+We will refer to this structure as a "speech style".  This
+structure needs to be mapped to device dependent codes to produce
+the desired effect.  This module forms a bridge between emacs
+packages    that wish to implement audio formatting
+and Emacspeak's TTS module.  Emacspeak produces voice
+change effects by examining the value of text-property
+'personality', as well as the face/font at point.
+
+Think of a buffer of formatted text along with the text-property
+'personality appropriately set as a "aural display list".  Module
+voice-setup.el help applications like EWW produce audio-formatted
+output by calling function acss-personality-from-speech-style with
+a "speech-style" --a structure as defined in this module and get
+back a symbol that they assign to the value of property
+'personality.  Emacspeak's rendering engine then does the needful
+at the time speech is produced.  Function
+acss-personality-from-speech-style does the following: Takes as
+input a "speech style" (1) Computes a symbol that will be used to
+refer to this specific speech style.  (2) Examines emacspeak's
+internal voice table to see if this speech style has a voice
+already defined.  If so it returns immediately.  Otherwise, it
+does the additional work of defining a -voice for future use.  See
+its use in this module to see how voices are defined independent
+of a given TTS engine.  How faces map to voices: TTS engine
+specific modules e.g., dectalk-voices.el and outloud-voices.el map
+ACSS dimensions to engine-specific codes. It does this via special
+form def-voice-font which takes a personality name, a voice name
+and a face name to set up the mapping between face and
+personality, and personality and voice.  Emacspeak modules use
+voice-setup-add-map when defining face->personality mappings.  For
+use from other modules, also see function voice-setup-map-face
+which is useful when mapping a single face.  Both
+voice-setup-add-map and voice-setup-map-face call special form
+def-voice-font.
+
+  new voices can be defined using CSS styles,
+ see special form defvoice. Voices defined
+via defvoice can be customized via custom see the
+documentation for defvoice.
+
 @subsection Voice-Setup Commands
 
 @subsubsection voice-lock-mode
