--- a/info/docs.texi
+++ b/info/docs.texi
@@ -18412,20 +18412,10 @@ does the additional work of defining a -voice for future use.  See
 its use in this module to see how voices are defined independent
 of a given TTS engine.  How faces map to voices: TTS engine
 specific modules e.g., dectalk-voices.el and outloud-voices.el map
-ACSS dimensions to engine-specific codes. It does this via special
-form def-voice-font which takes a personality name, a voice name
-and a face name to set up the mapping between face and
-personality, and personality and voice.  Emacspeak modules use
+ACSS dimensions to engine-specific codes.  Emacspeak modules use
 voice-setup-add-map when defining face->personality mappings.  For
 use from other modules, also see function voice-setup-map-face
 which is useful when mapping a single face.  Both
-voice-setup-add-map and voice-setup-map-face call special form
-def-voice-font.
-
-  new voices can be defined using CSS styles,
- see special form defvoice. Voices defined
-via defvoice can be customized via custom see the
-documentation for defvoice.
 
 @subsection Voice-Setup Commands
 
