--- a/servers/linux-outloud/lib/voice-params.org
+++ b/servers/linux-outloud/lib/voice-params.org
@@ -3,13 +3,20 @@
 ** Preset Voice Definitions
 
 
-|-------------------+--------+----------+---------+--------+--------+----------+----------+--------|
-| 1                 |      2 |        3 |       4 |      5 |      6 |        7 |        8 |        |
-| Voice             |  Adult |    Adult |   Adult |  Adult |  Adult |  Elderly |  Elderly |        |
-| Parameters        | Male 1 | Female 1 | Child 1 | Male 2 | Male 3 | Female 2 | Female 1 | Male 1 |
-| Pitch Baseline    |    65* |       81 |      93 |     56 |     69 |       89 |       68 |     61 |
-| Pitch Fluctuation |     30 |       30 |      35 |     47 |     34 |       35 |       30 |     44 |
-| Roughness         |      0 |        0 |       0 |      0 |      0 |        0 |        3 |     18 |
-| Speed             |     50 |       50 |      50 |     50 |     70 |       70 |       50 |     50 |
-| Volume            |     92 |      100 |      90 |     93 |     92 |       95 |       90 |     90 |
-|-------------------+--------+----------+---------+--------+--------+----------+----------+--------|
+|-------------------+--------+----------+---------+--------+--------+----------+----------+--------+---|
+| Voice Parameters  |      1 |        2 |       3 |      4 |      5 |        6 |        7 |      8 |   |
+| Voice             |  Adult |    Adult |   Adult |  Adult |  Adult |  Elderly |  Elderly |        |   |
+| Parameters        | Male 1 | Female 1 | Child 1 | Male 2 | Male 3 | Female 2 | Female 1 | Male 1 |   |
+| Pitch Baseline    |    65* |       81 |      93 |     56 |     69 |       89 |       68 |     61 |   |
+| Pitch Fluctuation |     30 |       30 |      35 |     47 |     34 |       35 |       30 |     44 |   |
+| Roughness         |      0 |        0 |       0 |      0 |      0 |        0 |        3 |     18 |   |
+| Speed             |     50 |       50 |      50 |     50 |     70 |       70 |       50 |     50 |   |
+| Volume            |     92 |      100 |      90 |     93 |     92 |       95 |       90 |     90 |   |
+| Gender            |      0 |        1 |       1 |      0 |      0 |        1 |        1 |      0 |   |
+| Head size         |     50 |       50 |      22 |     86 |     50 |       56 |       45 |     30 |   |
+| Breathiness       |    0** |       50 |       0 |      0 |      0 |       40 |       40 |     20 |   |
+|-------------------+--------+----------+---------+--------+--------+----------+----------+--------+---|
+
+
+
+
