--- a/etc/NEWS
+++ b/etc/NEWS
@@ -25,7 +25,14 @@ letter, and _ac_ for a word in all-caps.
 Those options have been replaced with a single _dtk-caps_ option that
  is now on by default in all programming modes.
 
- ** Faster Startup
+** Faster Startup
 
  Emacspeak startup has been speeded up by loading larger modules on a
  separate thread using ~make-thread~.
+
+
+** Gopher And Gemini
+
+   Module ~emacspeak-elpher~ speech-enables package ~elpher~, a
+   gopher/gemini client for accessing content on the Internet using
+   Gopher and Gemini protocols.
